--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -79,3 +79,36 @@ body {
 		}
 	}
 }
+
+// .email
+.email {
+	color: $color_black;
+
+	font-weight: 600;
+	font-size: 14px;
+
+	display: inline-block;
+
+	padding-left: 30px;
+
+	position: relative;
+
+	transition: all 0.5s;
+
+	&:hover {
+		text-shadow: 1px 1px 3px rgba($color_black, 0.7);
+	}
+
+	&::before {
+		content: '';
+		width: 16px;
+		height: 16px;
+
+		background-image: url(../images/footer/icon_mail.svg);
+		background-repeat: no-repeat;
+
+		position: absolute;
+		left: 0px;
+		top: 7px;
+	}
+}
