--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1161,12 +1161,14 @@
     }
 }
 
-// ------ CONTACT ------ //
+// --- CONTACT PAGE --- //
+// ------ MAP ------ //
 .map {
     margin-top: -55px;
     margin-bottom: 50px;
 }
 
+// ------ CONTACTS ------ //
 .contacts {
     margin-bottom: 100px;
 
@@ -1316,5 +1318,62 @@
                 box-shadow: 3px 3px 4px rgba($color_black, 0.7);
             }
         }
+    }
+}
+
+// ------ CONTACT-SLIDER ------ //
+.contact-slider {
+    padding-bottom: 102px;
+
+    // .contact-slider__link
+    &__link {
+        margin-bottom: 20px;
+
+        position: relative;
+
+        &:hover {
+            .contact-slider__title {
+                opacity: 1;
+            }
+        }
+    }
+
+    // .contact-slider__img
+    &__img {
+        width: 170px;
+        height: 170px;
+        object-fit: cover;
+
+        &__title {
+            opacity: 1;
+        }
+    }
+
+    // .contact-slider__title
+    &__title {
+        font-family: $font_montserrat;
+        font-weight: 700;
+        line-height: 22px;
+
+        text-align: center;
+
+        max-width: 170px;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background-color: rgba($color_white, 0.6);
+        color: $color_black;
+
+        opacity: 0;
+
+        transition: all .5s;
     }
 }
