--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1603,13 +1603,14 @@
             // .pagination__list-num
             &-num {
                 font-weight: 600;
+                font-size: 14px;
                 line-height: 28px;
 
                 color: $color_light-black;
 
                 // .pagination__list-num--active
                 &--active {
-                    color: $color-black;
+                    color: $color_black;
                 }
             }
         }
@@ -1684,6 +1685,314 @@
         // .blog__social-item
         &-item {
             margin-right: 20px;
+        }
+    }
+
+    //.blog-one
+    &-one {
+        margin-bottom: -100px;
+
+        //.blog-one__text
+        &__text {
+            margin-bottom: 40px;
+
+            //.blog-one__text blockquote
+            & blockquote {
+                font-style: italic;
+                font-weight: 300;
+                font-size: 24px;
+                line-height: 38px;
+
+                color: $color_black;
+
+                padding: 40px 42px 30px;
+
+                //.blog-one__text blockquote .blog__blockquote-author
+                & .blog__blockquote-author {
+                    &::before {
+                        left: 0px;
+                        transform: translateX(0%);
+                    }
+                }
+            }
+        }
+
+        //.blog-one__tags
+        &__tags {
+            margin-bottom: 39px;
+
+            //.blog-one__tags-title
+            &-title {
+                font-family: $font_montserrat;
+                font-weight: 700;
+                font-size: 20px;
+                line-height: 31px;
+
+                color: $color_black;
+
+                margin-bottom: 10px;
+            }
+
+            //.blog-one__tags-link
+            &-link {
+                display: inline-block;
+
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 28px;
+
+                color: #8F8D8D;
+
+                padding: 0 16px;
+                margin-right: 22px;
+                margin-bottom: 10px;
+
+                border: 1px solid rgba(#454647, .5);
+                border-radius: 14px;
+            }
+
+        }
+
+        // .blog-one__links
+        &__links {
+            padding: 40px 0px 32px;
+            margin-bottom: 35px;
+
+            display: flex;
+            justify-content: space-between;
+
+            border-top: 1px solid $color_grey;
+            border-bottom: 1px solid $color_grey;
+        }
+
+        // .blog-one__link
+        &__link {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 28px;
+
+            color: $color_light-black;
+
+            display: inline-block;
+
+            max-width: 276px;
+
+            // .blog-one__link-prev
+            &-prev {
+                padding-left: 33px;
+
+                position: relative;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+
+                    width: 12px;
+                    height: 23px;
+
+                    background-image: url(../images/blog/left-arrow-big.svg);
+                }
+            }
+
+            // .blog-one__link-next
+            &-next {
+                text-align: right;
+
+                padding-right: 33px;
+
+                position: relative;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    right: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+
+                    width: 12px;
+                    height: 23px;
+
+                    background-image: url(../images/blog/right-arrow-big.svg);
+                }
+            }
+        }
+
+        // .blog-one__comments
+        &__comments {
+
+            // .blog-one__comments-title
+            &-title {
+                font-family: $font_montserrat;
+                font-weight: 700;
+                font-size: 20px;
+                line-height: 31px;
+
+                color: $color_black;
+
+                margin-bottom: 15px;
+            }
+
+            // .blog-one__comments-item
+            &-item {
+                display: flex;
+
+                margin-bottom: 40px;
+
+                position: relative;
+            }
+
+            // .blog-one__comments-avatar
+            &-avatar {
+                width: 64px;
+                height: 64px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            // .blog-one__comments-info
+            &-info {
+                margin-left: 13px;
+            }
+
+            // .blog-one__comments-name
+            &-name {
+                font-family: $font_montserrat;
+                font-weight: 700;
+                line-height: 23px;
+
+                color: $color_black;
+            }
+
+            // .blog-one__comments-date
+            &-date {
+                color: $color_light-grey;
+            }
+
+            // .blog-one__comments-text
+            &-text {
+                margin-top: 10px;
+            }
+
+            // .blog-one__comments-reply
+            &-reply {
+                position: absolute;
+                top: 0;
+                right: 0;
+
+                padding: 0;
+
+                border: none;
+                background: none;
+
+                cursor: pointer;
+
+                font-weight: 600;
+                font-size: 14px;
+
+                color: $color_light-black;
+            }
+        }
+
+        // .blog-one__form
+        &__form {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+
+            // .blog-one__form-title
+            &-title {
+                font-family: $font_montserrat;
+                font-weight: 700;
+                line-height: 23px;
+
+                color: $color_black;
+
+                margin-bottom: 25px;
+            }
+
+            // .blog-one__form-textarea
+            &-textarea {
+                border: 1px solid $color_grey;
+                border-radius: 24px;
+                padding: 14px 15px;
+                margin-bottom: 12px;
+
+                width: 100%;
+                min-height: 125px;
+
+                resize: none;
+
+                &::placeholder {
+                    color: $color_light-grey;
+                }
+            }
+
+            // .blog-one__form-name
+            &-name {
+                border: 1px solid $color_grey;
+                border-radius: 24px;
+
+                width: 49%;
+
+                padding: 6px 15px;
+                margin-bottom: 21px;
+
+                &::placeholder {
+                    color: $color_light-grey;
+                }
+            }
+
+            // .blog-one__form-email
+            &-email {
+                border: 1px solid $color_grey;
+                border-radius: 24px;
+
+                width: 49%;
+
+                padding: 6px 15px;
+                margin-bottom: 21px;
+
+                &::placeholder {
+                    color: $color_light-grey;
+                }
+            }
+
+            // .blog-one__form-lable
+            &-lable {
+                width: 100%;
+
+                margin-bottom: 25px;
+
+                font-size: 14px;
+
+                color: $color_light-grey;
+            }
+
+            // .blog-one__form-button
+            &-button {
+                padding: 6px 12px;
+                width: 181px;
+
+                background-color: $color_black;
+                color: $color_white;
+
+                font-weight: 600;
+
+                border: none;
+                border-radius: 21px;
+
+                outline: none;
+                cursor: pointer;
+
+                transition: all 0.5s;
+
+                &:hover {
+                    box-shadow: 3px 3px 4px rgba($color_black, 0.7);
+                }
+            }
         }
     }
 }
