--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,6 +1,96 @@
+@media (max-width: 1366px) {
+    .collection {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .collection__image {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .top__slider-title {
+        font-size: 62px;
+        line-height: 74px;
+    }
+
+    .top__slider-img {
+        max-height: 640px;
+    }
+}
+
 @media (max-width: 998px) {
     .footer__contacts {
         width: 380px;
+    }
+
+    .path__item--right {
+        margin-left: auto;
+    }
+
+    .path__items-box::after {
+        right: 250px;
+        left: auto;
+    }
+
+    .path__item--bottom {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .gallery__items {
+        gap: 10px;
+    }
+
+    .gallery__btn {
+        margin: 0px;
+        padding: 6px 10px;
+    }
+}
+
+@media (max-width: 840px) {
+    .top__slider-img {
+        max-height: 540px;
+    }
+
+    .top__slider-title {
+        font-size: 44px;
+        line-height: 54px;
+    }
+
+    .top__inner {
+        padding-bottom: 25px;
+    }
+
+    .top__inner::after {
+        height: 100%;
+    }
+
+    .collection {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .gallery {
+        padding-top: 15px;
+        padding-bottom: 35px;
+    }
+
+    .gallery__buttons {
+        margin-bottom: 15px;
+    }
+
+    .blog-box__items {
+        grid-template-columns: repeat(1, 1fr);
+        text-align: center;
+    }
+
+    .blog-box__item-imagelink {
+        margin-bottom: 0px;
+    }
+
+    .blog-box__item-title {
+        max-width: 70%;
+        margin: 0 auto 25px;
     }
 }
 
@@ -43,6 +133,71 @@
         margin-right: auto;
     }
 
+    .decor {
+        padding: 55px 0px;
+    }
+
+    .new-collection {
+        padding-bottom: 55px;
+    }
+
+    .path {
+        padding-top: 35px;
+    }
+
+    .path__items-box {
+        align-items: flex-end;
+    }
+
+    .gallery__buttons {
+        display: grid;
+    }
+
+    .gallery__btn {
+        margin-bottom: 10px;
+    }
+
+    .blog-box {
+        padding-bottom: 20px;
+    }
+}
+
+@media (max-width: 650px) {
+    .top__slider-item .top__slider-img {
+        display: none;
+    }
+
+    .top__slider-info {
+        padding-top: 30px;
+    }
+
+    .top__slider-text {
+        margin-bottom: 15px;
+    }
+
+    .path__item {
+        width: 47%;
+    }
+
+    .path__items-box::after {
+        right: 47%;
+    }
+
+    .path__title {
+        margin-bottom: 15px;
+    }
+
+    .gallery__items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .gallery {
+        padding: 10px 0 40px;
+    }
+
+    .blog-box__item-title {
+        max-width: 95%;
+    }
 }
 
 @media (max-width: 540px) {
@@ -94,6 +249,7 @@
     .menu {
         padding-left: 0;
         padding-right: 0;
+        margin-bottom: -1px;
 
         width: 100%;
 
@@ -125,6 +281,23 @@
     .menu__list-link {
         display: block;
         padding: 20px 0;
+    }
+
+    .collection {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .top__slider-title,
+    .new-collection__title,
+    .decor__title,
+    .path__title,
+    .blog-box__title,
+    .about__prev-title,
+    .about__title,
+    .inspiration__title,
+    .contacts__title {
+        font-size: 28px;
+        line-height: 36px;
     }
 }
 
@@ -159,5 +332,37 @@
 
     .footer__copyright-text {
         padding: 20px 0px;
+    }
+
+    .new-collection {
+        padding-top: 20px;
+        padding-bottom: 30px;
+    }
+
+    .gallery__items {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .gallery__item:first-child {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .blog-box__item-title {
+        font-size: 20px;
+        line-height: 26px;
+    }
+
+    .blog-box__links {
+        font-size: 12px;
+        line-height: 18px;
+        display: flex;
+        flex-direction: column;
+    }
+    .blog-box__date::after {
+        display: none;
+    }
+    .blog-box__author::after {
+        display: none;
     }
 }
