--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,3 +1,11 @@
+// --------------------------------------------------- 1600px --- //
+@media (max-width: 1600px) {
+    .partners__items {
+        flex-wrap: wrap;
+    }
+}
+
+// --------------------------------------------------- 1366px --- //
 @media (max-width: 1366px) {
     .collection {
         grid-template-columns: repeat(3, 1fr);
@@ -8,6 +16,7 @@
     }
 }
 
+// --------------------------------------------------- 1200px --- //
 @media (max-width: 1200px) {
     .top__slider-title {
         font-size: 62px;
@@ -17,8 +26,24 @@
     .top__slider-img {
         max-height: 640px;
     }
+
+    .inspiration__img {
+        display: none;
+    }
+
+    .inspiration {
+        padding-top: 50px;
+    }
+
+    .inspiration::after {
+        background-position: top center;
+        height: inherit;
+        top: 30px;
+        background-size: cover;
+    }
 }
 
+// --------------------------------------------------- 998px --- //
 @media (max-width: 998px) {
     .footer__contacts {
         width: 380px;
@@ -46,8 +71,13 @@
         margin: 0px;
         padding: 6px 10px;
     }
+
+    .about__text {
+        padding-left: 0px;
+    }
 }
 
+// --------------------------------------------------- 840px --- //
 @media (max-width: 840px) {
     .top__slider-img {
         max-height: 540px;
@@ -92,15 +122,13 @@
         margin-bottom: 0px;
     }
 
-    .blog-box__item-imagelink {
-        width: 100%;
-    }
-
+    .blog-box__item-imagelink,
     .blog-box__item-image {
         width: 100%;
     }
 }
 
+// --------------------------------------------------- 768px --- //
 @media (max-width: 768px) {
     .header__btn {
         display: none;
@@ -167,8 +195,17 @@
     .blog-box {
         padding-bottom: 20px;
     }
+
+    .about__prev {
+        padding: 70px 0px;
+    }
+
+    .about__content {
+        padding: 70px 0px 0px;
+    }
 }
 
+// --------------------------------------------------- 650px --- //
 @media (max-width: 650px) {
     .top__slider-item .top__slider-img {
         display: none;
@@ -201,8 +238,13 @@
     .gallery {
         padding: 10px 0 40px;
     }
+
+    .about__popup {
+        padding: 60px 0;
+    }
 }
 
+// --------------------------------------------------- 540px --- //
 @media (max-width: 540px) {
     .logo {
         order: -1;
@@ -295,15 +337,24 @@
     .decor__title,
     .path__title,
     .blog-box__title,
-    .about__prev-title,
     .about__title,
     .inspiration__title,
     .contacts__title {
         font-size: 28px;
         line-height: 36px;
     }
+
+    .about__prev-title {
+        font-size: 40px;
+        line-height: 48px;
+    }
+
+    .about__content {
+        padding: 40px 0px 0px;
+    }
 }
 
+// --------------------------------------------------- 410px --- //
 @media (max-width: 410px) {
     .footer__inner {
         justify-content: space-between;
@@ -369,5 +420,17 @@
 
     .blog-box__author::after {
         display: none;
+    }
+
+    .about__popup {
+        padding: 25px 0;
+    }
+
+    .inspiration__item-num {
+        margin-left: 15px;
+    }
+
+    .partners {
+        padding-bottom: 32px;
     }
 }
