--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -242,6 +242,15 @@
     .about__popup {
         padding: 60px 0;
     }
+
+    .gallery__item:first-child {
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .gallery.gallery-page .gallery__item:nth-child(8) {
+        grid-column: 2;
+        grid-row: 5;
+    }
 }
 
 // --------------------------------------------------- 540px --- //
@@ -432,5 +441,10 @@
 
     .partners {
         padding-bottom: 32px;
+    }
+
+    .gallery.gallery-page .gallery__item:nth-child(8) {
+        grid-column: 1;
+        grid-row: 8;
     }
 }
