adaptive @MEDIA for CONTACTS done

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1193,6 +1193,9 @@
 .map {
     margin-top: -55px;
     margin-bottom: 50px;
+    iframe {
+        height: 578px;
+    }
 }
 
 // ------ /MAP ------ //
