--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -14,6 +14,12 @@
     .collection__image {
         width: 100%;
     }
+
+    .map {
+        margin-top: 0;
+    }
+
+
 }
 
 // --------------------------------------------------- 1200px --- //
@@ -126,6 +132,23 @@
     .blog-box__item-image {
         width: 100%;
     }
+
+    .map {
+        margin-bottom: 15px;
+    }
+
+    .contacts__content {
+        padding-left: 0;
+    }
+
+    .contacts__title {
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+
+    .contacts {
+        margin-bottom: 50px;
+    }
 }
 
 // --------------------------------------------------- 768px --- //
@@ -203,6 +226,12 @@
     .about__content {
         padding: 70px 0px 0px;
     }
+
+    .map {
+        iframe {
+            height: 350px;
+        }
+    }
 }
 
 // --------------------------------------------------- 650px --- //
@@ -247,6 +276,7 @@
         grid-column: 1;
         grid-row: 1;
     }
+
     .gallery.gallery-page .gallery__item:nth-child(8) {
         grid-column: 2;
         grid-row: 5;
@@ -360,6 +390,10 @@
 
     .about__content {
         padding: 40px 0px 0px;
+    }
+
+    .contacts__form-input {
+        width: 100%;
     }
 }
 
