need to do @media for SLIDER in CONTACTS

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -395,6 +395,15 @@
     .contacts__form-input {
         width: 100%;
     }
+
+    .menu__list-link {
+        font-size: 28px;
+        line-height: 36px;
+    }
+
+    .menu__list-link--active {
+        border-bottom: none;
+    }
 }
 
 // --------------------------------------------------- 410px --- //
