adaptive @media for CONTACTS done (including slider)

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,3 +1,16 @@
+// --------------------------------------------------- 1800px --- //
+@media (max-width: 1800px) {
+    .contact-slider__img {
+        width: 100%;
+    }
+    .contact-slider__title {
+        max-width: 100%;
+    }
+    .slick-slide {
+        margin-left: 15px;
+    }
+}
+
 // --------------------------------------------------- 1600px --- //
 @media (max-width: 1600px) {
     .partners__items {
@@ -148,6 +161,10 @@
 
     .contacts {
         margin-bottom: 50px;
+    }
+
+    .contact-slider {
+        padding-bottom: 40px;
     }
 }
 
@@ -403,6 +420,10 @@
 
     .menu__list-link--active {
         border-bottom: none;
+    }
+
+    .slick-dots li {
+        margin: 0 4px;
     }
 }
 
