added some comments

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -5,6 +5,7 @@
 html,
 body {
 	height: 100%;
+	// overflow-x: hidden and position: relative are needed to hide horizontal scroll on mobile devices
 	overflow-x: hidden;
 	position: relative;
 }
